setup menu app done

--- a/lms_app/micro_apps/menu_app/firebase.json
+++ b/lms_app/micro_apps/menu_app/firebase.json
@@ -1,1 +1,1 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"ultrasonic-clinic","configurations":{"android":"1:400364342771:android:01eb47a7aba43d82135686","ios":"1:400364342771:ios:e84af7a557d9b4bf135686"}}}}}}
+{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"contactus-app-f8313","configurations":{"android":"1:903563139844:android:4c57f15ee8a9d4ae118e51","ios":"1:903563139844:ios:86d5696ed3f227e5118e51"}}}}}}
